# folium_tripslayer

./: LICENSE.txt  README.md  pyproject.toml  sample.py
docs/: demo.html  leaflet-dark.css  leaflet-dark2.css  leaflet.timedimension.layer.geojsonwhole.js  leaflet.timedimension.layer.trips.js  leaflet.timedimension.min.js  leaflet.timedimension.src.js
src/folium_tripslayer/: __init__.py  tripslayer.py
